# SCAV

./: .gitignore  .gitmodules  Cargo.toml  build.rs
assets/c_src/: openvr_wrapper.hpp
assets/shaders/: basic.frag.glsl  basic.vert.glsl  basic.vert.spv  debug.vert.glsl
org/: gdd.md  todo.md  vulkan.md
src/: input.rs  main.rs  physics.rs  renderer.rs  static_resources.rs
src/physics/: mod.rs
src/renderer/: mod.rs
src/shaders/: basic.frag.glsl  basic.vert.glsl
src/vr/: compositor.rs  defines.rs  mod.rs  openvr_bindings.rs  system.rs
