[package]
name = "game"
version = "0.1.0"
authors = ["Will Fiore <w.p.fiore@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "*"
array_tool = "*"
log = "*"
simple_logger = "*"
winit = "*"
ash = "*"

[build-dependencies]
shaderc-sys = "*"
shaderc = "*"
