[package]
name = "scav"
version = "0.1.0"
authors = ["Will Fiore <w.p.fiore@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Vulkan bindings
ash = "*"

# Logging
log = "*"
simple_logger = "*"

# Maths
nalgebra = "*"

# Windowing
winit = "*"

# Utility
arrayvec = "*"
array_tool = "*"


[build-dependencies]
# Shaders
shaderc-sys = "*"
shaderc = "*"

# OpenVR building
bindgen = "*"
