[package]
name = "scav"
version = "0.1.0"
authors = ["Will Fiore <w.p.fiore@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Vulkan bindings
ash = "0.31.0"

# Logging
log = "0.4.11"
simple_logger = "1.6.0"

# Maths
nalgebra = "0.22.0"
nphysics3d = "0.17.0"

# Windowing
winit = "0.22.2"

# Utility
arrayvec = "0.5.1"
array_tool = "1.0.3"
noise = "0.6.0"
rand = "0.7.3"
downcast-rs = "1.2.0"

[build-dependencies]
# Shaders
shaderc-sys = "0.6.2"
shaderc = "0.6.2"

# OpenVR building
bindgen = "0.55.1"

[profile.release]
debug = true
